<resources>
    <string name="app_name">Geneva Lab Timer App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="arms">Arms</string>
    <string name="remove">Remove</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="new_tic">New</string>
    <string name="new_timestamp">Create Timestamp</string>
</resources>
