<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="java.time.format.DateTimeFormatter" />

        <variable
            name="cardsViewModel"
            type="ch.li.k.genevalabtimerapp.cards.CardsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            tools:listitem="@layout/fragment_cards_chest_item">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{(v) -> cardsViewModel.addCard(v, `Back`)}"
                android:text="@string/add"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored" />

            <Button
                android:id="@+id/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remove"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored" />

            <Button
                android:id="@+id/btnEdit"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="6dp"
                android:gravity="center"
                android:onClick="@{(v) -> cardsViewModel.newCard(v, `Chest`)}"
                android:text="@string/edit"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored" />

            <Button
                android:id="@+id/btnSave"
                style="@android:style/Widget.Material.Light.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:elevation="6dp"
                android:gravity="center"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.Material.Widget.Button.Borderless.Colored" />

        </LinearLayout>

    </LinearLayout>

</layout>